[package]
name = "nocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.44.0"
wgpu = "0.12.0"
env_logger = "0.9.0"
log = "0.4.16"
pollster = "0.2.5"
bytemuck = { version = "1.8.0", features = [ "derive" ] }
glam = "0.20.3"
bevy_ecs = "0.6.1"
mime = { git = "https://github.com/nanoteck137/mime" }
